--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT = 5000
 MONGO_URL = 'mongodb+srv://user:12345@cluster0.2kdcfe3.mongodb.net/?retryWrites=true&w=majority'
+ORIGIN = 'http://localhost:3000'
